css/main.css
/* ... */
#main-search input[type=text],
#main-search button {
  width: 100%;
}

#main-search button {
  width: 30px;
  height: 30px;
  padding: 0;
}

.xs-input {
  width: 60px;
}

.form-group,
.form-row {
  margin-top: 20px;
}

.form-row:not(.center) {
  margin-left: 1em;
}
/********************************************
* buttons
********************************************/
.submit {
  padding: 0.3em;
  padding-left: 1em;
  border: 2px rgba(51, 40, 18, 1);
  border-radius: 12px;
  background-color: rgba(255, 255, 255, 1.0);
  text-align: center;
  margin: auto;
  width: 200px;
  /*margin-top: 12%;*/
  /*margin-bottom: 12%;*/
  position: relative;
  color: rgba(115, 90, 41, 0.8);
  font-family: Biko;
  font-size: 1em;
}

@media screen and (min-width: 768px) {
	.addButton,
	.addProductButton {
		margin-left: 117px;
	}
	.addLocationButton {
		margin-left: 196px;
	}
}
/********************************************
* tables
********************************************/
td {
  vertical-align: middle !important;
}

.table tbody tr th,
.table tbody tr td {
	border-top: 0;
}

@media screen and (min-width: 768px) {
	.table {
		margin-left: 8em !important;
	}
}
/********************************************
* bootstrap setup
********************************************/
li[role=presentation] a:hover,
li[role=presentation] a:visited,
li[role=presentation] a:active,
li[role=presentation] a:focus,
li[role=presentation].open a {
  background-color: transparent !important;
}

#my-account-dropdown-menu {
  background-color: rgba(115, 90, 41, 0.8);
  }

/********************************************
* thumbnails
********************************************/
.thumbnail {
  padding: 2px;
}

.tiny-thumbnail,
.thumbnail img {
  width: 28px;
  height: 28px;
}

.thumbnail-links li {
  display: inline-block;
  margin-left: 0.1em;
  float: right;
}

@media screen and (min-width: 768px) {
  .tiny-thumbnail,
  .thumbnail img {
    width: 70px;
    height: 70px;
  }

  .thumbnail {
    padding: 4px;
  }

  .thumbnail-links li {
    margin-left: 1em;
  }
}


.thumbnail {
  display: inline-block;
}

.product-quantity {
  max-width: 80px;
}

/********************************************
* Utilities classes
********************************************/

/* no margin deprecated user mt0 instead */
.no-margin,
.mt0 {
  margin: 0 !important;
}

.mt5 {
	margin-top: 5px !important;

}

.mt10 {
	margin-top: 10px !important;
}

.mt20 {
	margin-top: 20px !important;
}

.mt25 {
	margin-top: 25px !important;

}

.mt30 {
  margin-top: 30px !important;
}

.mt40 {
	margin-top: 40px !important;
}

.mt60 {
  margin-top: 60px !important;
}

.mt80 {
	margin-top: 80px !important;
}

.mb10 {
	margin-bottom: 20px;
}

.mb0 {
	margin-bottom: 0;
}

.mb20 {
	margin-bottom: 20px;
}

.mb30 {
	margin-bottom: 30px;
}

.mb40 {
	margin-bottom: 40px;
}

.mb60 {
	margin-bottom: 60px;
}

.mb80 {
	margin-bottom: 80px;
}

.ml1 {
	margin-left: 1em !important;
}

/* sometimes I hate bootstrap... :( */
.ml2 {
	margin-left: 2em !important;
}

.no-padding-right {
  padding-right: 0;
}

.push-right {
  float: right;
}

.center {
  text-align: center;
}

.left {
	text-align: left;
}

.iblock {
	display: inline-block !important;
}

.disable-color {
  color: #e5e5e5;
  border-color: #e5e5e5 !important;
}

.outline {
  border: 1px solid;
  border-radius: 3px;
  padding: 1em;
}

.screen-center {
  margin-top: 10%;
}

.white-transparent-container {
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 10px;
  padding: 2em;
}

/********************************************
* Headings
********************************************/
h2 {
  padding: 10px 0;
}

h1 {
  font-size: 1.4em;
  padding: 0;
  margin: 0;
}

h2 {
  font-size: 1.6em;
}

/********************************************
* cart
********************************************/
.basic-information {
  color: rgba(115, 90, 41, 0.8);
}

.cart-product {
  margin-top: 30px;
}

#cart th,
#cart #total-price-result {
  color: rgba(51, 40, 18, 1);
  font-weight: bold;
}



#cart #total-price-result {
  position: relative;
  left: 1em;
}

#cart #total-price-label {
  position: relative;
  left: 10%;
}

#cart [id$=-final-price] {
  width: 105px !important;
  text-align: right;
}

#cart th:nth-child(6) {
  text-align: right;
}

#cart td:last-child {
  padding-left: 60px;
}

/* product page */
.currency-value {
  font-size: 1.6em;
  font-weight: bold;
}

#listing-page-cart {
  border: 3px solid rgba(51, 40, 18, 1);
  border-radius: 3px;
  padding: 1em;
  margin-bottom: 30px;
}

#cart-main-menu-item {
  font-size: 1.2em;
  position: relative;
  bottom: 10px;
}

#cart-main-menu-item small {
  font-size: 0.7em;
  display: block;
}

.count {
  font-size: 0.7em;
  padding: 0.05em 0.15em;
  border-radius: 2px;
  color: white;
  background-color: rgba(115, 90, 41, 0.8);
  position: absolute;
  bottom: 35px;
  left: 26px;
}

/********************************************
* store
********************************************/
.store-name {
  font-size: 1em;
  position: relative;
  bottom: 40px;
  margin-left: 10px;
}

@media screen and (min-width: 768px) {
  .store-name {
    font-size: 2em;
  }
}

.store-banner {
  width: 100%;
  height: 100px;
  overflow: hidden;
}

.store-banner img {
  position: relative;
  bottom: 10px;
}

.count-store-products {
  height: 80px;
  width: 80px;
  padding: 1em;
  font-size: 20px;
  text-align: center;
}

.count-store-products small {
  font-size: 0.7em;
  display: block;
}

.thumbnail-links .count-store-products span {
  position: relative;
  top: 20px;
}

.section {
  background-color: white;
  padding: 0.4em;
  border: 1px rgba(51, 40, 18, 1);
  border-radius: 5px;
}

@media screen and (min-width: 768px) {
  .section {
    padding: 1em;
  }
}

#add-product-to-cart {
  width: 100%;
  margin-top: 20px;
}
/* ... */

